--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@jackyzha0/quartz",
-  "description": "🌱 publish your digital garden and notes as a website",
+  "description": "🌱 publish your notes as a website",
   "private": true,
   "version": "4.3.1",
   "type": "module",
